# OMRChecker

./: AGENTS.md  README_CN.md  main.py  pyproject.toml  requirements.txt
omr_gui/: __init__.py  app.py
omr_gui/core/: __init__.py  id_sheet_generator.py  omr_runner.py  project_model.py  result_parser.py  template_io.py  template_model.py
omr_gui/gui/: __init__.py  id_sheet_generator.py  main_window.py  template_editor.py
samples/student_id/: student_id.omrproj
samples/student_id/config/: config.json  template.json
samples/test/: test.omrproj
src/: entry.py
src/processors/: CropOnMarkers.py  CropPage.py
src/schemas/: template_schema.py
